@@ -144,6 +144,7 @@ This feature was developed by Jake Howard.
  * Refactor userbar styles to use the same stylesheet as other components (Thibaud Colas)
  * Add deprecation warnings for `wagtail.core` and other imports deprecated in Wagtail 3.0 (Matt Westcott)
  * Migrate admin upgrade notification message implementation to a Stimulus controller (Loveth Omokaro)
+ * Migrate workflow and workflow tasks enable action to a Stimulus controller (Loveth Omokaro)
 
 ## Upgrade considerations
 
