@@ -6,7 +6,6 @@
 {% block extra_js %}
     {{ block.super }}
     {% include "wagtailadmin/pages/_editor_js.html" %}
-    {% include "wagtailadmin/workflows/includes/_edit_js.html" %}
 {% endblock %}
 
 {% block content %}
@@ -50,7 +49,12 @@
                                 <ul>
                                     {% if can_enable %}
                                         <li>
-                                            <button type="submit" class="button no" data-enable-action>{{ view.enable_item_label }}</button>
+                                            <button class="button no"
+                                                data-action="w-action#post"
+                                                data-controller="w-action"
+                                                data-w-action-url-value="{{ view.get_enable_url }}"
+                                                type="submit">{{ view.enable_item_label }}
+                                            </button>
                                         </li>
                                     {% elif can_disable %}
                                         <li>
